# injector

./: CMakeLists.txt  LICENSE  README.md
include/injector/: error.h  injector.h
include/injector/private/: error.h  loader.h
src/: error.c  injector.c  loader.c
src/tests/: injected_executable.c  injected_lib.c  injector.c
